--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cool.zpw10018.coolz_android.MainActivity">
+    tools:context="com.cool.zpw10018.activities.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
