--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="welcome_logo_bottom_margin">80dp</dimen>
+    <dimen name="item_margin">15dp</dimen>
+    <dimen name="action_bar_height">56dp</dimen>
 </resources>
