zpw-2016-9-15 1抽屉的菜单布局

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_person_information"
         app:itemTextColor="@color/font_normal"
-        app:menu="@menu/activity_main_drawer"/>
+        app:menu="@menu/main_drawer_layout"/>
 
 </android.support.v4.widget.DrawerLayout>
